<resources>
    <!-- Titles -->
    <string name="app_name">React.io</string>
    <string name="menu_title">DESAFÍOS</string>

    <!-- Buttons -->
    <string name="empezar">Empezar</string>
    <string name="tocar">TOCAR!</string>




    <!-- Game list -->
    <string name="game1">PRESIONAR EL BOTÓN!</string>
    <string name="game2">SECUENCIA NUMÉRICA</string>
    <string name="game3">ATRAPA EL OBJETIVO</string>
    <string name="game4">SECUENCIA DE LUCES</string>
    <string name="game7">ADIVINÁ LA BANDERA</string>
    <string name="flag_game_instructions">Elegí el país correcto lo más rápido posible. Cada error suma penalización al tiempo final.</string>



    <!-- Messages -->
    <string name="in_development_message">Estamos trabajando duro para lanzar este juego. Mientras tanto, podés disfrutar de los demás!</string>
    <string name="reaction_game_buttongame_instructions">Cuando aparezca el botón ROJO: \nPresionalo lo más rápido que puedas!</string>
    <string name="sequence_game_instructions">Toca los números en orden ascendente lo más rápido posible.</string>
    <string name="tap_target_instructions">Atrpá el objetivo 5 veces presionando lo más rápido que puedas!</string>


    <!-- Content Description -->
    <string name="home">Botón para volver al inicio</string>
    <string name="restart">Reintentar juego</string>
    <string name="user_settings">Configuración de usuario</string>
    <string name="background_gradient">Fondo con colores gradientes</string>
    <string name="working_on_it">Imagen de peresozo trabajando</string>

    <!-- Sequence Game Results -->
    <string name="results_title">Resultados - Juego %1$s</string>
    <string name="results_errors">Errores: %1$d</string>
    <string name="results_time">Tiempo: %1$.2f s</string>

    <!-- Results default -->
    <string name="results_default_title">Resultados</string>
    <string name="results_errors_default">Errores: 0</string>
    <string name="results_time_default">Tiempo: 0.0s</string>
    <string name="replay">Reintentar</string>
    <string name="back">Volver</string>
    <string name="ranking">Leaderboard</string>
    <string name="profile">Mis estadísticas</string>
    <string name="achievements">Logros</string>
    <string name="filtrar_por_juego">Filtrar por Juego</string>
    <string name="rules_sequence_game">Presiona \'Iniciar Secuencia\' y repite la secuencia de luces</string>
    <string name="color_change_game_instructions">"Toca la pantalla cuando cambie de color "</string>
    <string name="game5">CAMBIO DE COLOR</string>
    <string name="shape_matching_game_instructions">PRESIONA LA PANTALLA CUANDO LAS FIGURAS COINCIDAN</string>
    <string name="game6">MATCHING FIGURAS</string>
    <string name="rules_shape_matching_game">CUANDO LAS FIGURAS MATCHEEN, TOCAR LA PANTALLA!</string>
    <string name="logros">Logros</string>
    <string name="flechita_izq">←</string>
    <string name="opcion1">Opción 1</string>
    <string name="opcion2">Opción 2</string>
    <string name="opcion3">Opción 3</string>
    <string name="opcion4">Opción 4</string>
    <string name="cdescription_amarillo">Amarillo</string>
    <string name="cdescription_azul">Azul</string>
    <string name="cdescription_verde">Verde</string>
    <string name="cdescription_rojo">Rojo</string>
    <string name="react_io">React.io</string>
    <string name="main_label1_user_mail">Email</string>
    <string name="main_label2_password">Contraseña</string>
    <string name="main_hint_nombre_de_usuario">Nombre de usuario</string>
    <string name="main_btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="main_btn_unregistered">¿No tienes cuenta? Regístrate</string>
    <string name="main_first_text_bienvenido">Bienvenido!</string>
    <string name="main_btn_principal">Empezar a Jugar</string>
    <string name="main_btn_my_stats">Mis Estadísticas</string>
    <string name="main_btn_leaderbord">Tabla de Líderes</string>
    <string name="main_btn_red_logout">Cerrar Sesión</string>
    <string name="my_stats_loading">Cargando estadísticas...</string>
    <string name="my_stats_my_scores">Mis Puntuaciones</string>
    <string name="item_leaderborad_first">1</string>
    <string name="item_leaderborad_exampple_usuario123">Usuario123</string>
    <string name="item_leaderborard_example_game">Juego de Reacción</string>
    <string name="item_leaderboard_example_secs">2.345s</string>
    <string name="item_leaderboard_example_errors">2 errores</string>
    <string name="item_score_example_game">Juego de Reacción</string>
    <string name="item_score_example_time">2.345s</string>
    <string name="item_score_example_errors">Errores: 2</string>
    <string name="item_score_example_timestamp">08/11/2025 15:30</string>


</resources>