<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="6dp"
    app:cardBackgroundColor="@color/lightPurple"
    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/item_leaderborad_first"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_leaderborad_exampple_usuario123"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvGameType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_leaderborard_example_game"
                android:textSize="12sp"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_leaderboard_example_secs"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvErrors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_leaderboard_example_errors"
                android:textSize="12sp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
