<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flag_game_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/darkerPurple">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game7"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="8dp" />

    <ImageView
        android:id="@+id/imgFlag"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_game_instructions"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:text="@string/opcion1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/start_button_text_size"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultText" />

        <Button
            android:id="@+id/btnOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:text="@string/opcion2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/start_button_text_size"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultText" />

        <Button
            android:id="@+id/btnOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:text="@string/opcion3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/start_button_text_size"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultText" />

        <Button
            android:id="@+id/btnOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:text="@string/opcion4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/start_button_text_size"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultText" />

    </LinearLayout>

</LinearLayout>
