<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding_large"
    android:background="@drawable/bg_gradient_darker">

    <!-- Imagen de titulo -->
    <ImageView
        android:id="@+id/titleIcon"
        android:layout_width="@dimen/image_size_large"
        android:layout_height="@dimen/image_size_large"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="@dimen/margin_small"
        android:src="@drawable/reactio_working_on_it"
        android:contentDescription="@string/working_on_it"/>
    <TextView
        android:id="@+id/resultText"
        android:layout_width="@dimen/text_width_max"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/in_development_message"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_regular" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:background="@drawable/button_bg"
        android:backgroundTint="@null"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_home"
        android:scaleType="centerInside"
        android:padding="@dimen/padding_small"
        app:backgroundTint="@null" />



</LinearLayout>
