<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@drawable/bg_gradient_darker">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="@dimen/text_width_max"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="@string/reaction_game_buttongame_instructions"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/button_bg"
        android:backgroundTint="@null"
        android:text="@string/empezar"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultText" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/design_default_color_error"
        app:backgroundTint="@null"
        android:text="@string/tocar"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tapButton"
        app:layout_constraintVertical_bias="0.915">

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="124dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:contentDescription="@string/restart"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_again"
            app:backgroundTint="@null" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/button_bg"
            android:backgroundTint="@null"
            android:contentDescription="@string/home"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            app:backgroundTint="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>