<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_darker"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sequence_game_instructions"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"/>

    <!-- Boton de empezar -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="@dimen/start_button_width"
        android:layout_height="@dimen/start_button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/button_bg"
        android:backgroundTint="@null"
        android:text="@string/empezar"
        android:textColor="@android:color/white"
        android:textSize="@dimen/start_button_text_size"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultText" />

    <GridLayout
        android:id="@+id/gridNumbers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="5"
        android:rowCount="5"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="false"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintBottom_toTopOf="@id/bottomButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp">

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/restart"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_again" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/home"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>