<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@drawable/bg_gradient_darker">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="@dimen/text_width_max"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/results_default_title"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultText"
        android:layout_marginBottom="@dimen/margin_large">

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="48dp"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/restart"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_again" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/home"
            android:padding="@dimen/padding_small"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
